project1/error/20200003/25_error.txt
/home/shlee/workspace/lsp/project1/STD_DIR/20200003/25.c: In function ‘main’:
/home/shlee/workspace/lsp/project1/STD_DIR/20200003/25.c:38:1: error: expected ‘;’ before ‘}’ token
 }
 ^
/home/shlee/workspace/lsp/project1/STD_DIR/20200003/25.c:38:1: error: expected declaration or statement at end of input
